# Lightweight-PGO-LLVM-Visualization

./: LLVM Cheat Sheet.docx  README.md  RunAddAttributes.py  RunAllPasses.py  RunAllTests.py  RunAllTests_Legacy.py  RunCoverageMapping.py  RunDiffTool.py  RunGenerateRandomProgram.py  The State of PGO in LLVM.docx  fullDot.dot  setup  simpleBash  testScript.py
ChordPlot/: README  README~
ChordPlot/ChordPlot/: AnimationWindow.pde  GUI.pde  (+32 more)
MultithreadedDataLoad/: .javaLambdaTest.java.swp  javaLambdaTest.java
RandomPrograms/: deleteme.cpp  randprog1  randprog1.cpp  randprog1.ll  randprog1.ll.bc
experiment/: WithoutO3.ll  WithoutOptimization.ll  experiment.cpp  test.dot
lib/Transforms/: CMakeLists.txt
lib/Transforms/FuncBlockCount/: FuncBlockCount.cpp
lib/Transforms/FunctionBlockCounts/: CMakeLists.txt  CMakeLists.txt~  FunctionBlockCounts.cpp  Makefile  Makefile~
lib/Transforms/myAddCounter/: CMakeLists.txt  CMakeLists.txt~  Makefile  MyAddCounter.cpp
lib/Transforms/myAliasAnalysis/: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  MyAliasAnalysis.cpp
lib/Transforms/myAnnotation/: CMakeLists.txt  CMakeLists.txt~  MakeFile  MakeFile~  MyAnnotation.cpp  cmake_install.cmake
lib/Transforms/myModulePass/: CMakeLists.txt  CMakeLists.txt~  MakeFile  MyModulePass.cpp
lib/Transforms/myModulePass2/: CMakeLists.txt  CMakeLists.txt~  MyModulePass2.cpp  cmake_install.cmake
lib/Transforms/myOpCodeCounter/: CMakeLists.txt~  MyOpCodeCounter.cpp  cmake_install.cmake
treemapSketch/: ChildApplets.pde  DataString.pde  Histogram.pde  TreeMap.pde  treemapSketch.pde
(+65 files in other folders)
