add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(FuncBlockCount)
add_subdirectory(FunctionBlockCounts)
add_subdirectory(myOpCodeCounter)
add_subdirectory(myAliasAnalysis)
add_subdirectory(myAddCounter)
